# ffxx

./: .clang-format  .gdbinit  .gitignore  CMakeLists.txt  Makefile  README.md  ffxx.code-workspace
.github/workflows/: ci.yml
ffapps/: CMakeLists.txt  README.md  streammux.cpp  streammux.css  streammux.html  streammux.js  streamtool-plot  streamtool.cpp  streamtool_stats.cpp  streamtool_stats.hpp
ffgui/: CMakeLists.txt  README.md  ffgui.cpp  ffgui.supp  ffgui_icon.cpp  ffgui_icon.hpp  ffgui_inc.hpp
ffgui/gui/: gui_app.cpp  gui_app.hpp  gui_fonts.cpp  gui_fonts.hpp  gui_global.cpp  gui_global.hpp  gui_global_colours.hpp  gui_notify.cpp  gui_notify.hpp  gui_utils.cpp  gui_utils.hpp
ffgui/gui_msg/: gui_msg.cpp  gui_msg.hpp  gui_msg_ubx_cfg_valxxx.cpp  gui_msg_ubx_cfg_valxxx.hpp  gui_msg_ubx_esf_meas.cpp  gui_msg_ubx_esf_meas.hpp  gui_msg_ubx_esf_status.cpp  gui_msg_ubx_esf_status.hpp  gui_msg_ubx_mon_comms.cpp  gui_msg_ubx_mon_comms.hpp  gui_msg_ubx_mon_hw.cpp  gui_msg_ubx_mon_hw.hpp  gui_msg_ubx_mon_hw2.cpp  gui_msg_ubx_mon_hw2.hpp  gui_msg_ubx_mon_hw3.cpp  gui_msg_ubx_mon_hw3.hpp  gui_msg_ubx_mon_rf.cpp  gui_msg_ubx_mon_rf.hpp  gui_msg_ubx_mon_span.cpp  gui_msg_ubx_mon_span.hpp  gui_msg_ubx_mon_ver.cpp  gui_msg_ubx_mon_ver.hpp  gui_msg_ubx_nav_cov.cpp  gui_msg_ubx_nav_cov.hpp  gui_msg_ubx_nav_dop.cpp  gui_msg_ubx_nav_dop.hpp  gui_msg_ubx_rxm_rawx.cpp  gui_msg_ubx_rxm_rawx.hpp  gui_msg_ubx_rxm_rtcm.cpp  gui_msg_ubx_rxm_rtcm.hpp  gui_msg_ubx_rxm_sfrbx.cpp  gui_msg_ubx_rxm_sfrbx.hpp  gui_msg_ubx_rxm_spartn.cpp  gui_msg_ubx_rxm_spartn.hpp  gui_msg_ubx_tim_tm2.cpp  gui_msg_ubx_tim_tm2.hpp
ffgui/gui_widget/: gui_widget_filter.cpp  gui_widget_filter.hpp  gui_widget_hexdump.cpp  gui_widget_hexdump.hpp  gui_widget_history.cpp  gui_widget_history.hpp  gui_widget_log.cpp  gui_widget_log.hpp  gui_widget_map.cpp  gui_widget_map.hpp  gui_widget_opengl.cpp  gui_widget_opengl.hpp  gui_widget_streamspec.cpp  gui_widget_streamspec.hpp  gui_widget_tabbar.cpp  gui_widget_tabbar.hpp  gui_widget_table.cpp  gui_widget_table.hpp
ffgui/gui_win/: gui_win.cpp  gui_win.hpp  gui_win_app.cpp  gui_win_app.hpp  gui_win_experiment.cpp  gui_win_experiment.hpp  gui_win_filedialog.cpp  gui_win_filedialog.hpp  gui_win_hexdecbin.cpp  gui_win_hexdecbin.hpp  gui_win_multimap.cpp  gui_win_multimap.hpp  gui_win_play.cpp  gui_win_play.hpp  gui_win_streammux.cpp  gui_win_streammux.hpp
ffgui/gui_win_data/: gui_win_data.cpp  gui_win_data.hpp  gui_win_data_3d.cpp  gui_win_data_3d.hpp  gui_win_data_config.cpp  gui_win_data_config.hpp  gui_win_data_control.cpp  gui_win_data_control.hpp  gui_win_data_custom.cpp  gui_win_data_custom.hpp  gui_win_data_epoch.cpp  gui_win_data_epoch.hpp  gui_win_data_fwupdate.cpp  gui_win_data_fwupdate.hpp  gui_win_data_inf.cpp  gui_win_data_inf.hpp  gui_win_data_log.cpp  gui_win_data_log.hpp  gui_win_data_map.cpp  gui_win_data_map.hpp  gui_win_data_messages.cpp  gui_win_data_messages.hpp  gui_win_data_plot.cpp  gui_win_data_plot.hpp  gui_win_data_satellites.cpp  gui_win_data_satellites.hpp  gui_win_data_scatter.cpp  gui_win_data_scatter.hpp  gui_win_data_signals.cpp  gui_win_data_signals.hpp  gui_win_data_stats.cpp  gui_win_data_stats.hpp
ffgui/gui_win_input/: gui_win_input.cpp  gui_win_input.hpp  gui_win_input_corr.cpp  gui_win_input_corr.hpp  gui_win_input_logfile.cpp  gui_win_input_logfile.hpp  gui_win_input_receiver.cpp  gui_win_input_receiver.hpp
ffgui/stuff/: data.cpp  data.hpp  database.cpp  database.hpp  glmatrix.cpp  glmatrix.hpp  input.cpp  input.hpp  logfile.cpp  logfile.hpp  mapparams.cpp  mapparams.hpp  maptiles.cpp  maptiles.hpp  opengl.cpp  opengl.hpp  receiver.cpp  receiver.hpp  utils.cpp  utils.hpp
ffxx/: CMakeLists.txt  README.md  codegen.pl  epoch.cpp  epoch.hpp  http.cpp  http.hpp  stream.cpp  stream.hpp  ublox.cpp  ublox.hpp  utils.cpp  utils.hpp
ffxx/stream/: autobauder.hpp  base.cpp  base.hpp  canstr.cpp  canstr.hpp  exec.cpp  exec.hpp  files.cpp  files.hpp  gga_sta.cpp  gga_sta.hpp  ipc.cpp  ipc.hpp  loop.cpp  loop.hpp  serial.cpp  serial.hpp  spidev.cpp  spidev.hpp  tcpclients.cpp  tcpclients.hpp  tcpservers.cpp  tcpservers.hpp  udp.cpp  udp.hpp
